bukiyou: Fix line spacing, add footnotes

--- a/translations/paroleise/unfinished/bukiyou/styles.css
+++ b/translations/paroleise/unfinished/bukiyou/styles.css
@@ -86,9 +86,9 @@ h1 {
 
 table {
     border-spacing: 10px;
-    width: 60%;
-    margin-left: 23%;
-    margin-right: 35%;
+    width: 100%;
+    margin-left: 2%;
+    margin-right: 0%;
     /* font-size: 18px; */
     /* border: 2px solid red; */
 }
